[package]
name = "telegoy"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
image = "0.25.9"
walkdir = "2"
reqwest = "0.12.24"
config = { version = "0.15.19", default-features = false, features = ["async", "toml"] }
serde = "1.0.228"
uuid = "1.19.0"
clap = { version = "4.5.53", features = ["derive"] }
